fix(filter-list): align label count

--- a/packages/filter-list/src/FilterListItem/filter-list-item.pcss
+++ b/packages/filter-list/src/FilterListItem/filter-list-item.pcss
@@ -21,6 +21,7 @@
     flex-basis: 100%;
 
     &-label {
+      align-items: center;
       display: flex;
       gap: var(--sds-space-padding-tiny);
     }
